--- a/src/pages/Home/style.module.less
+++ b/src/pages/Home/style.module.less
@@ -44,6 +44,7 @@
         text-decoration: none;
         font-weight: bold;
         transition: background 0.3s ease;
+        border: none;
       }
     }
   }
