--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  width: 1000px;
-  height: 700px;
+  width: 100%;
+  height: 100%;
   max-width: 1200px;
+  min-width: 800px;
   position: fixed;
   top: 50%;
   left: 50%;
