canvas控制面板，侧边

--- a/src/pages/CreatePrinterTag/style.module.less
+++ b/src/pages/CreatePrinterTag/style.module.less
@@ -10,13 +10,16 @@
 
     .main{
       flex: 1;
-      padding: 20px;
+      position: relative;
     }
 
     .canvas{
       background: #ffffff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
 
     .sider{
