--- a/src/components/PrintTagSiderPanel/style.module.less
+++ b/src/components/PrintTagSiderPanel/style.module.less
@@ -37,5 +37,20 @@
         margin-right: 0;
       }
     }
+
+    .save_button{
+      width: 100%;
+      height: 50px;
+      border-radius: 8px;
+      background-color: var(--color-primary);
+      color: #fff;
+      font-size: 18px;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      &:hover{
+        background-color: var(--color-secondary);
+      }
+    }
   }
 }
